add maven add lombok refactor code to run